maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:8: error: value unary_! is not a member of Int
	if ((!aMurNord(x,y)) && !getIndication(x,y-1)<=marquage){
                                ^JediEscaper:11: error: missing arguments for method aMurOuest in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if(!aMurOuest && !getIndication(x-1,y)<=marquage){
      ^JediEscaper:11: error: value unary_! is not a member of Int
  if(!aMurOuest && !getIndication(x-1,y)<=marquage){
                   ^